backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  labels:
    app: ingress-project
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5000
  selector:
    app: ingress-project
    tier: backend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  labels:
    app: ingress-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-project
      tier: backend
  template:
    metadata:
      labels:
        app: ingress-project
        tier: backend
    spec:
      containers:
      - image: js0603/backend:latest
        name: nodejs-backend
        ports:
        - containerPort: 8080
          name: backend
