frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  labels:
    app: ingress-project
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: ingress-project
    tier: frontend
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    app: ingress-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-project
      tier: frontend
  template:
    metadata:
      labels:
        app: ingress-project
        tier: frontend
    spec:
      containers:
      - image: js0603/frontend:latest
        name: react-frontend
        ports:
        - containerPort: 80
          name: frontend
